# MedtriageAi

./: Dockerfile  README.md  _audit.py  _capture_run.py  _checklist.py  _fix_unicode.py  _print_results.py  _read_results.py  _show_results.py  app.py  audit_clean.txt  audit_raw.txt  audit_utf8.txt  baseline_results.txt  capture.json  environment.py  inference.py  inference_out.txt  key_results.txt  key_results_utf8.txt  openenv.yaml  pyproject.toml  raw_lines.txt  requirements.txt  results.txt  results_clean.txt  run_baseline.py  run_log.txt  setup.py  tasks.py  uv_err.txt  val_clean.txt  val_final.txt  val_log.txt  validate.py
medical_triage_env.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
server/: app.py
static/: index.html  style.css
